--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <style media="screen">
+      body {
+        font-family: 'Poppins', sans-serif;
+      }
       h1 {
         margin-top: 30px;
       }
@@ -16,6 +20,22 @@
         margin: 0 auto 0;
         display: block;
       }
+      .options {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      a {
+        background-color: #FB3B49;
+        box-shadow: 8px 8px 0 rgba(251,59,73,.2);
+        padding: 20px;
+        min-width: 250px;
+        text-align: center;
+        color: #fff;
+        font-size: 30px;
+        text-decoration: none;
+        margin: 0 10px;
+      }
     </style>
   </head>
   <body>
@@ -26,6 +46,11 @@
     <p>2019</p>
     <div id="geo-globe">
       <canvas id="canvas"></canvas>
+    </div>
+    <div class="options">
+      <a href="wordpress">Wordpress</a>
+      <a href="joomla">Joomla</a>
+      <a href="moodle">Moodle</a>
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/easing/EasePack.min.js"></script>
