--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Omar Flórez Salgado</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <style media="screen">
       body {
@@ -48,7 +48,7 @@
       <canvas id="canvas"></canvas>
     </div>
     <div class="options">
-      <a href="wordpress">Wordpress</a>      
+      <a href="wordpress">Wordpress</a>
       <a href="moodle">Moodle</a>
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script>
